fixed navigation bugs on mobile devices and added notebook content

--- a/css/NavBarStyles.css
+++ b/css/NavBarStyles.css
@@ -21,7 +21,7 @@ h5 {
 
 nav {
     z-index: 10;
-    box-shadow: 0px 1px 15px #00806c;
+    box-shadow: 0px 1px 15px #333;
     visibility: hidden;
     font-stretch: normal;
 }
